--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,10 @@ h1, h2 {
 }
 
 body {
-  /*background-color: #000000e0;*/
+  /*background-color: #00b8d6;*/
+  background: #f1f1f1 url('../src/sapphirestar.svg') center center no-repeat;
   color: #ffffffbd;
+  /*display: none;*/
 }
 
 /*pseudo styles for "placeholder"*/
@@ -48,7 +50,14 @@ button {
   /*background: #464040;*/
   background-color: #000000e0;
   /*padding: 0 0 5px;*/
-  padding: 0 15px;
+  padding: 15px 15px 0;
+}
+
+.App-header h1 a {
+  display: none;
+  text-decoration: none;
+  color: #f1f1f1;
+  /*padding-left: 50px;*/
 }
 
 .container {
@@ -173,6 +182,7 @@ button {
   flex-direction: column;
   justify-content: space-between;
   /*padding-top: 5px;*/
+  /*min-height: 100vh;*/
 }
 
 .main-content h2 {
@@ -623,7 +633,7 @@ button {
       /*padding: 0 0 15px;*/
     }
     .main-content {
-      padding-top: 1rem;
+      padding-top: 50px;
       flex-direction: row;
       justify-content: space-between;
     }
@@ -663,9 +673,6 @@ button {
 @media only screen
   and (min-device-width: 1024px) 
   and (-webkit-min-device-pixel-ratio: 1) {
-    body {
-      background-color: #fff;
-    }
     .container {
       width: 980px;
       margin: 0 auto;
